# rfid-silion-compat

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
examples/: build_packets.rs  high_level_host.rs  mock_client.rs  serial_query.rs  single_tag_inventory_serial.rs  write_race_bib_epc_serial.rs
examples/web/: .gitignore  README.md  index.html  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
npm/: README.md
scripts/: build-npm-package.sh
src/: async_proto.rs  client.rs  codes.rs  command.rs  epc.rs  error.rs  frame.rs  host.rs  lib.rs  parsers.rs  serial.rs  session.rs  silion_reader.rs  test_support.rs  transport.rs  web_bindings.rs  web_serial.rs
