[package]
name = "rfidlibrs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
serial = ["dep:tokio", "dep:tokio-serial"]
web-serial = [
	"dep:js-sys",
	"dep:futures",
	"dep:serde",
	"dep:serde-wasm-bindgen",
	"dep:wasm-bindgen",
	"dep:wasm-bindgen-futures",
]

[dependencies]
tokio = { version = "1", optional = true, features = ["io-util", "macros", "rt-multi-thread", "time"] }
tokio-serial = { version = "5.4.5", optional = true }
futures = { version = "0.3", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
futures = "0.3"
serde_json = "1"
